# cortExchange

./: README.md  pyproject.toml  requirements.txt  test-owncloud.py
cortexchange/: __init__.py  cli.py  downloader.py  inference.py  utils.py  wdclient.py
cortexchange/architecture/: __init__.py
cortexchange/architecture/surf/StopPredictor/: __init__.py
cortexchange/architecture/surf/TransferLearning/: __init__.py  train_nn.py
cortexchange/architecture/surf/TransferLearningV2/: __init__.py  dino_model.py  models.py  pre_processing_for_ml.py  utils.py
cortexchange/architecture/surf/stop_predictor/: __init__.py
cortexchange/models/: surf_stop_model.py
cortexchange/predictor/: __init__.py  stop_predictor.py
cortexchange/predictor/surf/: __init__.py  stop_predictor.py
