[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="cortExchange"
version="0.0.1"
dynamic=["dependencies"]
requires-python = ">= 3.8"
description = "Trained model collection for RadioAstronomy. Integrated with SURFDrive and ResearchDrive."
authors = [
  {name = "Jurjen de Jong", email = "jurjendejong@strw.leidenuniv.nl" },
  {name = "Duncan Kampert", email = "duncan.kampert@surf.nl" },
  {name = "Robert Jan Schlimbach", email = "robert-jan.schlimbach@surf.nl" },
]
readme = "README.md"

[project.scripts]
cortexchange-cli = "cortexchange.cli:main"

[tool.setuptools]
packages = ["cortexchange"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
